IE scroll jump fix

--- a/views/main.less
+++ b/views/main.less
@@ -37,6 +37,8 @@
   font-size: 14px;
 }
 
+html { overflow-y:scroll; }
+
 body {
   background: url(../images/bg.png) repeat;
   font: 16px/20px "HelveticaNeue-Light","Helvetica Neue",Helvetica, arial, sans-serif;
